fix .main width on small screens

--- a/App/src/assets/scss/_background.scss
+++ b/App/src/assets/scss/_background.scss
@@ -45,7 +45,8 @@
 .main {
 position: relative;
 min-height: 424px;
-width: 1080px;
+max-width: 1080px;
+width: 100%;
 margin: 36px auto;
 padding: 12px 12px 42px 12px;
 z-index: 10;
